[package]
name = "ReactiveRS2"
version = "0.1.0"
authors = ["Thibaut Pérami <thibaut.perami@ens.fr>"]

[dependencies]
promacros = { path = "promacros"}
log = "0.3"
env_logger = "0.3"
time = "0.1.38"
cpuprofiler = "0.0.3"

# [[bin]]
# name = "gol"
# path = "src/gameoflife.rs"

# [[bin]]
# name = "sb"
# path = "src/sandbox.rs"